# conformance-tests

./: .gitignore  Cargo.toml  README.md  archive.sh
.github/workflows/: ci.yml  release.yml
components/key-value/: Cargo.toml  README.md
components/outbound-mqtt/: Cargo.toml
components/outbound-redis/: Cargo.toml
components/outbound-wasi-http-v0.2.0/: Cargo.toml
components/postgres/: Cargo.toml
components/request-shape/: Cargo.toml  README.md
components/sqlite/: Cargo.toml
components/tcp-sockets/: Cargo.toml  README.md
components/variables/: Cargo.toml
crates/conformance-tests/: Cargo.toml  README.md
crates/conformance-tests/src/: config.rs  lib.rs
crates/helper/: Cargo.toml
crates/test-environment/: Cargo.toml
docs/: test-manifest.md
request-shape/: spin.toml
request-shape/src/: lib.rs
src/: main.rs
tests/key-value/: spin.toml  test.json5
tests/key-value-no-permission/: spin.toml  test.json5
tests/outbound-mqtt/: spin.toml  test.json5
tests/outbound-mqtt-no-permission/: spin.toml  test.json5
tests/outbound-redis/: spin.toml  test.json5
tests/outbound-redis-no-permission/: test.json5
tests/outbound-redis-variable-permission/: test.json5
tests/outbound-wasi-http-v0.2.0/: spin.toml  test.json5
tests/outbound-wasi-http-v0.2.0-no-perms/: spin.toml  test.json5
tests/postgres/: spin.toml  test.json5
tests/request-shape/: Cargo.toml  README.md  spin.toml  test.json5
tests/sqlite/: test.json5
tests/sqlite-no-permission/: test.json5
tests/tcp-sockets-ip-range-variable-permission/: spin.toml  test.json5
wit/: world.wit
(+34 files in other folders)
