[package]
name = "conformance-tests-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
conformance-tests = { path = "crates/conformance-tests" }
flate2 = "1.0"
regex = "1.10"
tempfile = "3.3"
tar = "0.4"

[workspace]
members = ["components/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
helper = { path = "crates/helper" }
wit-bindgen = "0.26"
