[package]
name = "conformance-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
flate2 = "1.0"
json5 = "0.4.1"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
tar = "0.4.40"
test-environment = { path = "../test-environment" }
